--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "commonjs",
   "description": "My webpack project",
-  "main": "index.js",
+  "main": "./src/index.js",
   "scripts": {
     "test": "test",
     "build": "webpack --mode=production --node-env=production",
@@ -31,15 +31,16 @@
     "@babel/core": "^7.17.8",
     "@babel/preset-env": "^7.16.11",
     "@webpack-cli/generators": "^2.4.2",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.4",
     "babel-preset-env": "^1.7.0",
     "css-loader": "^6.7.1",
-    "eslint": "^8.12.0",
+    "eslint": "^8.13.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-react": "^7.29.4",
-    "eslint-plugin-react-hooks": "^4.4.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.6.2",
     "style-loader": "^3.3.1",
