--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,9 +2,11 @@ env:
   browser: true
   es2021: true
 extends:
-   - eslint:recommended,
-   - airbnb
+  - airbnb-base
+  - prettier
 parserOptions:
   ecmaVersion: latest
   sourceType: module
-rules: {}
+plugins:
+  - prettier
+rules: { }
