--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "My webpack project",
   "main": "./src/index.js",
   "scripts": {
-    "test": "test",
+    "test": "jest",
     "build": "webpack --mode=production --node-env=production",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
@@ -42,6 +42,7 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.0.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^27.5.1",
     "prettier": "^2.6.2",
     "style-loader": "^3.3.1",
     "webpack": "^5.72.0",
