--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -3,10 +3,13 @@ env:
   es2021: true
 extends:
   - airbnb-base
+  - plugin:jest/recommended
   - prettier
+parser: "@babel/eslint-parser"
 parserOptions:
   ecmaVersion: latest
   sourceType: module
 plugins:
   - prettier
+  - jest
 rules: { }
