--- a/package.json
+++ b/package.json
@@ -52,5 +52,9 @@
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1",
     "workbox-webpack-plugin": "^6.5.3"
+  },
+  "dependencies": {
+    "on-change": "^4.0.0",
+    "yup": "^0.32.11"
   }
 }
